# break_time_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: app.rs  color_settings.rs  constants.rs  main.rs  state.rs
src/app/: options_screen.rs  overlay_screen.rs
