[package]
name = "break_time_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "^0.4.0"
winit = "^0.29.3"
chrono = "0.4.31"
device_query = "1.1.3"
tray-icon = "0.11.0"
native-dialog = "0.7.0"