[package]
name = "break_time_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.24.0" }
eframe = { version = "0.24.0", features = ["serde","persistence", "glow","default_fonts"] }
egui_extras = { version = "0.24.0", features = ["file","image","svg"] }
#image = { version = "0.24.7", features = [] }
winit = "0.29.4"
serde = "1.0.193"
notify-rust = "4.10.0"
chrono = { version = "0.4.31", features = ["serde"] }
device_query = "1.1.3"
tray-icon = "0.11.0"
#native-dialog = "0.7.0"

[profile.release]
opt-level = 3
strip = true
lto = true
